--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ serif;
 <body>
 <div>
     <h1>Self-Study Squad</h1>
-    <p>Llearn how to study without a tutor using an android phone</p>
+    <p>Learn how to study without a tutor using an android phone</p>
     <p><a href="https://dev-selfstudysquad.pantheonsite.io/">More information...</a></p>
 </div>
 </body>
