--- a/index.html
+++ b/index.html
@@ -1,48 +1,82 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-    <title>Self-Study Squad</title>
+    <!-- Link to Roboto font for English -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
 
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style type="text/css">
+    <!-- Link to Noto Sans Bengali font for Bengali -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+Bengali&display=swap">
+
+    <!-- Define CSS styles for your elements -->
+  <style>
     body {
-        background-color: #f0f0f2;
-        margin: 0;
-        padding: 0;
-        font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f8f8f8;
+      color: #333;
+    }
 
-serif;
-        
+    .container {
+      max-width: 600px;
+      margin: 50px auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      text-align: center;
     }
-    div {
-        width: 600px;
-        margin: 5em auto;
-        padding: 2em;
-        background-color: #fdfdff;
-        border-radius: 0.5em;
-        box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);
+
+    h1 {
+      color: #007BFF;
     }
-    a:link, a:visited {
-        color: #38488f;
-        text-decoration: none;
+
+    h2 {
+      color: #333;
     }
-    @media (max-width: 700px) {
-        div {
-            margin: 0 auto;
-            width: auto;
-        }
+
+    button {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #007BFF;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.3s;
     }
-    </style>    
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    p {
+      margin: 20px 0;
+    }
+  </style>
+
 </head>
-
 <body>
-<div>
-    <h1>Self-Study Squad</h1>
-    <p>Learn how to study using an android phone</p>
-    <p><a href="https://dev-selfstudysquad.pantheonsite.io/">More information...</a></p>
-</div>
+  <div class="container">
+    <h1 class="mixed-text">আপনার পড়াশোনাকে আরো সফল ও আরো আনন্দময় করে তুলুন! আমাদের "Self-Study Kits" নিউজলেটারের সাথে জোর কদমে সাফল্যের পথে এগিয়ে চলুন!</h1>
+    <h2 class="bengali-text">নিজে নিজেই নিজের পড়াশোনা করুন মোবাইল ফোন ব্যবহার করে। শিখে নিন তার নতুন নতুন কলাকৌশল, জীবন থেকে ফুৎকারে উড়িয়ে দিন পুরোনো শিক্ষাপদ্ধতির যত বিরক্তি ও প্রতিযোগিতায় পিছিয়ে থাকার পরাজয়!</h2>  
+
+
+<p class="bengali-text">অত্যাধুনিক সব ধারণা আর পদ্ধতি ব্যবহার করে লেখাপড়া করার আনন্দকে অন্য এক উচ্চতর মাত্রায় নিয়ে যান!</p>
+
+<p class="bengali-text">নিজে নিজেই নিজের পড়াশোনা করতে উৎসাহীদের জন্য বিশেষভাবে তৈরি করা যত অনলাইন কার্যক্রম গুলোর এক বিশাল সমুদ্রে ডুব দিন, আর আপনার পড়াশোনাকে আরও মজাদার করুন!<p>
+
+<p class="bengali-text">আমাদের নিউজলেটারে এক্সক্লুসিভভাবে পাওয়া যাবে পরীক্ষিত পদ্ধতিগুলোর এক গুপ্তধন, যেগুলো  নিজে নিজেই নিজের পড়াশোনা করার পদ্ধতি দিয়ে আপনার পড়াশোনা ও ব্যক্তিত্ব বিকাশের ধারাটকে বদলে দেবে চিরতরে!</p>
+
+<p class="bengali-text">এই নিউজলেটারে সবার জন্যই আছে কিছু না কিছু! আর এটি একেবারে ফ্রি!</p>
+
+<p class="bengali-text">আজই সাইন আপ করুন, আর আপনার শিক্ষাজীবনে আনন্দ ও সাফল্যের নতুন নতুন মাত্রা যোগ করুন!</p>
+
+<button>Click to Get Started</button>
+
+<p class="bengali-text">আপনার জীবন ও ভাগ্য আপনার হাতে, আপনিই আপনার ভাগ্যনির্ধারক! আজই আমাদের "Self-Study Kits" নিউজলেটার সাবস্ক্রাইব করুন, আর আপনার পড়াশোনাকে নতুন এক উচ্চতায় তুলে ধরুন!</p>
+
+  </div>
 </body>
 </html>
