--- a/index.html
+++ b/index.html
@@ -1,82 +1,266 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
+    <title>Self-Study Kits</title>
+    <link rel="icon" href="https://r.socj.info/spm.ico">
+
+    <meta property="og:title" content="Anyone Can Write Proper English">
+    <meta property="og:site_name" content="Siva's Online Content Junction">
+    <meta property="og:url" content="https://spmukherjee.in/index.html">
+    <meta property="og:description" content="English Writing Made Easy: A Path for All to 
+
+Follow.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://spmukherjee.in/english-writing-made-easy.png">
+
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Link to Roboto font for English -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
 
     <!-- Link to Noto Sans Bengali font for Bengali -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+Bengali&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans
 
-    <!-- Define CSS styles for your elements -->
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f8f8f8;
-      color: #333;
++Bengali&display=swap">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" 
+
+type="text/javascript"></script>
+    <script type="text/javascript" language="javascript"> 
+        $(function () { $(this).bind("contextmenu", function (e) { e.preventDefault(); }); }); 
+    </script>
+    <script>
+        document.onkeydown = function(e) {
+            if (e.ctrlKey && (e.keyCode === 85 )) {
+                return false;
+            }
+        };
+    </script>
+
+    <style type="text/css">
+
+        /* Apply Roboto font to English text */
+        .english-text {
+            font-family: 'Roboto', sans-serif;
+        }
+
+        /* Apply Noto Sans Bengali font to Bengali text */
+        .bengali-text {
+            font-family: 'Noto Sans Bengali', sans-serif;
+        }
+
+
+        /* Style for the "Back to Top" button */
+        #back-to-top {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            right: 30px;
+            z-index: 99;
+            border: none;
+            outline: none;
+            background-color: #007BFF;
+            color: #fff;
+            cursor: pointer;
+            padding: 10px;
+            border-radius: 5px;
+        }
+
+        #back-to-top:hover {
+            background-color: #0056b3;
+        }
+
+        .responsive {
+  width: 100%;
+  height: auto;
+}
+
+        body {
+            background-color: #f0f0f2;
+            margin: 0;
+            padding: 0;
+            font-family: 'Roboto', sans-serif;
+            font-size: 18px; /* Adjust the font size as per your preference */
+        }
+
+        div {
+            width: 600px;
+            margin: 5em auto;
+            padding: 2em;
+            background-color: #fdfdff;
+            border-radius: 0.5em;
+            box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);
+        }
+
+        similar-gigs {
+            width: 500px;
+            margin: 5em auto;
+            padding: 2em;
+            background-color: #fdfdff;
+            border-radius: 0.5em;
+            box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);
+        }
+        a.button:link, a.button:visited {
+            display: inline-block;
+            background-color: #1b74e4;
+            color: #fff;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 4px;
+        }
+
+        @media (max-width: 700px) {
+            div {
+                margin: 30px 20px 0;
+                width: auto;
+            }
+
+             .video-embed {
+        width: 100% !important;
+        margin: 0 auto; 
+     }
+
+    .embed-container { 
+        position: relative; 
+        padding-bottom: 56.25%;
+        overflow: hidden;
+        max-width: 100%;
+        height: auto;
+    } 
+
+    .embed-container iframe,
+    .embed-container object,
+    .embed-container embed { 
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
 
-    .container {
-      max-width: 600px;
-      margin: 50px auto;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      text-align: center;
-    }
+        }
+    </style> 
 
-    h1 {
-      color: #007BFF;
-    }
+<!-- Meta Pixel Code -->
 
-    h2 {
-      color: #333;
-    }
-
-    button {
-      display: inline-block;
-      padding: 10px 20px;
-      background-color: #007BFF;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    button:hover {
-      background-color: #0056b3;
-    }
-
-    p {
-      margin: 20px 0;
-    }
-  </style>
-
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '354458495335117');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=354458495335117&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+  
 </head>
+
 <body>
-  <div class="container">
-    <h1 class="mixed-text">আপনার পড়াশোনাকে আরো সফল ও আরো আনন্দময় করে তুলুন! আমাদের "Self-Study Kits" নিউজলেটারের সাথে জোর কদমে সাফল্যের পথে এগিয়ে চলুন!</h1>
-    <h2 class="bengali-text">নিজে নিজেই নিজের পড়াশোনা করুন মোবাইল ফোন ব্যবহার করে। শিখে নিন তার নতুন নতুন কলাকৌশল, জীবন থেকে ফুৎকারে উড়িয়ে দিন পুরোনো শিক্ষাপদ্ধতির যত বিরক্তি ও প্রতিযোগিতায় পিছিয়ে থাকার পরাজয়!</h2>  
+<BODY oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
+<div>
+    <h1 class="mixed-text">আপনার পড়াশোনাকে আরো সফল ও আরো আনন্দময় করে তুলুন! আমাদের "Self-Study Kits" নিউজলেটারের সাথে 
+
+জোর কদমে সাফল্যের পথে এগিয়ে চলুন!</h1>
+    <h2 class="bengali-text">নিজে নিজেই নিজের পড়াশোনা করুন মোবাইল ফোন ব্যবহার করে। শিখে নিন তার নতুন নতুন কলাকৌশল, জীবন থেকে 
+
+ফুৎকারে উড়িয়ে দিন পুরোনো শিক্ষাপদ্ধতির যত বিরক্তি ও প্রতিযোগিতায় পিছিয়ে থাকার পরাজয়!</h2>  
 
 
 <p class="bengali-text">অত্যাধুনিক সব ধারণা আর পদ্ধতি ব্যবহার করে লেখাপড়া করার আনন্দকে অন্য এক উচ্চতর মাত্রায় নিয়ে যান!</p>
 
-<p class="bengali-text">নিজে নিজেই নিজের পড়াশোনা করতে উৎসাহীদের জন্য বিশেষভাবে তৈরি করা যত অনলাইন কার্যক্রম গুলোর এক বিশাল সমুদ্রে ডুব দিন, আর আপনার পড়াশোনাকে আরও মজাদার করুন!<p>
+<p class="bengali-text">নিজে নিজেই নিজের পড়াশোনা করতে উৎসাহীদের জন্য বিশেষভাবে তৈরি করা যত অনলাইন কার্যক্রম গুলোর এক বিশাল সমুদ্রে ডুব দিন, 
 
-<p class="bengali-text">আমাদের নিউজলেটারে এক্সক্লুসিভভাবে পাওয়া যাবে পরীক্ষিত পদ্ধতিগুলোর এক গুপ্তধন, যেগুলো  নিজে নিজেই নিজের পড়াশোনা করার পদ্ধতি দিয়ে আপনার পড়াশোনা ও ব্যক্তিত্ব বিকাশের ধারাটকে বদলে দেবে চিরতরে!</p>
+আর আপনার পড়াশোনাকে আরও মজাদার করুন!<p>
+
+<p class="bengali-text">আমাদের নিউজলেটারে এক্সক্লুসিভভাবে পাওয়া যাবে পরীক্ষিত পদ্ধতিগুলোর এক গুপ্তধন, যেগুলো  নিজে নিজেই নিজের পড়াশোনা করার 
+
+পদ্ধতি দিয়ে আপনার পড়াশোনা ও ব্যক্তিত্ব বিকাশের ধারাটকে বদলে দেবে চিরতরে!</p>
+
+<p class="mixed-text"><strong>আমাদের নিউজলেটার প্রতি সপ্তাহে WhatsApp-এর মাধ্যমে আপনার স্মার্টফোনে পাঠানো হবে।</strong> এতে 
+
+থাকবে:</p>
+<p class="bengali-text"><ul>
+<li>পরীক্ষিত পদ্ধতিগুলোর এক গুপ্তধন, যেগুলো নিজে নিজেই নিজের পড়াশোনা করার পদ্ধতি দিয়ে আপনার পড়াশোনা ও ব্যক্তিত্ব বিকাশের ধারাটকে বদলে দেবে চিরতরে!</li>
+<li>নিজে নিজেই পড়াশোনা করার জন্য বিশেষভাবে তৈরি করা অনলাইন কার্যক্রমের সংক্ষিপ্তসার</li>
+<li>নতুন জ্ঞান ও দক্ষতা অর্জনের জন্য আপনার ব্যক্তিগত লক্ষ্য নির্ধারণের জন্য সহায়তা</li>
+</ul></p>
 
 <p class="bengali-text">এই নিউজলেটারে সবার জন্যই আছে কিছু না কিছু! আর এটি একেবারে ফ্রি!</p>
 
 <p class="bengali-text">আজই সাইন আপ করুন, আর আপনার শিক্ষাজীবনে আনন্দ ও সাফল্যের নতুন নতুন মাত্রা যোগ করুন!</p>
 
-<button>Click to Get Started</button>
+<center>
+<a href="[URL]" class="button">Click to Get Started</a></p>
+</center>
 
-<p class="bengali-text">আপনার জীবন ও ভাগ্য আপনার হাতে, আপনিই আপনার ভাগ্যনির্ধারক! আজই আমাদের "Self-Study Kits" নিউজলেটার সাবস্ক্রাইব করুন, আর আপনার পড়াশোনাকে নতুন এক উচ্চতায় তুলে ধরুন!</p>
+<p class="bengali-text">আপনার জীবন ও ভাগ্য আপনার হাতে, আপনিই আপনার ভাগ্যনির্ধারক! আজই আমাদের "Self-Study Kits" নিউজলেটার 
 
-  </div>
+সাবস্ক্রাইব করুন, আর আপনার পড়াশোনাকে নতুন এক উচ্চতায় তুলে ধরুন!</p>
+
+    </section>
+
+
+
+
+
+    </div>
+
+<p style="text-align: center; font-size: 12px; margin-bottom: -18px;"><span style="color: 
+
+#a62b3d;"><span style="color: #6a0002;"><a style="text-decoration: none; color: #6a0002;" 
+
+href="https://spmukherjee.in/earnings-disclaimer.html">Disclaimer</a></span> <span 
+
+style="color: #6a0002;">|</span> <span style="color: #6a0002;"><a style="text-decoration: none; 
+
+color: #6a0002;" href="https://spmukherjee.in/terms-of-use.html">Terms of Use</a></span> <span 
+
+style="color: #6a0002;">|</span> <span style="color: #6a0002;"><a style="text-decoration: none; 
+
+color: #6a0002;" href="https://spmukherjee.in/privacy-policy.html">Privacy 
+
+Policy</a></span></p>
+
+        <p style="text-align: center;">
+            <span style="font-size: 12pt; font-family: lora, serif; color: #000000;">
+                Copyright &copy; <script>document.write(new Date().getFullYear())
+
+</script>.&nbsp;https://spmukherjee.in
+            </span>
+        </p>
+
+    <!-- Back to Top button -->
+    <button onclick="scrollToTop()" id="back-to-top" title="Go to top">Top</button>
+
+    <!-- JavaScript for the Back to Top functionality -->
+    <script>
+        // Function to scroll to the top of the page
+        function scrollToTop() {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
+        }
+
+        // Show/hide the "Back to Top" button based on scroll position
+        window.onscroll = function() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                document.getElementById('back-to-top').style.display = 'block';
+            } else {
+                document.getElementById('back-to-top').style.display = 'none';
+            }
+        };
+    </script>
 </body>
 </html>
