--- a/index.html
+++ b/index.html
@@ -169,8 +169,9 @@ src="https://www.facebook.com/tr?id=354458495335117&ev=PageView&noscript=1"
 <body>
 <BODY oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
 <div>
-    <h2 class="mixed-text">আপনার পড়াশোনাকে আরো সফল ও আরো আনন্দময় করে তুলুন! আমাদের "Self-Study Kits" নিউজলেটারের সাথে 
-
+    <center>
+    <h2 class="bengali-text">আপনার পড়াশোনাকে আরো সফল ও আরো আনন্দময় করে তুলুন! আমাদের "Self-Study Kits" নিউজলেটারের সাথে 
+    </center>
 জোর কদমে সাফল্যের পথে এগিয়ে চলুন!</h2>
     
     <h3 class="bengali-text">নিজে নিজেই নিজের পড়াশোনা করুন মোবাইল ফোন ব্যবহার করে। শিখে নিন তার নতুন নতুন কলাকৌশল, জীবন থেকে 
