--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@ src="https://www.facebook.com/tr?id=354458495335117&ev=PageView&noscript=1"
 <BODY oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
 <div>
     <center>
-    <h2 class="bengali-text">আপনার পড়াশোনাকে আরো সফল ও আরো আনন্দময় করে তুলুন! আমাদের "Self-Study Kits" নিউজলেটারের সাথে 
+    <h2 class="bengali-text"><span style="color: #ff0000;">আপনার পড়াশোনাকে আরো সফল ও আরো আনন্দময় করে তুলুন! আমাদের "Self-Study Kits" নিউজলেটারের সাথে 
     
-জোর কদমে সাফল্যের পথে এগিয়ে চলুন!</h2>
+জোর কদমে সাফল্যের পথে এগিয়ে চলুন!</span></h2>
     </center>
     <h3 class="bengali-text">নিজে নিজেই নিজের পড়াশোনা করুন মোবাইল ফোন ব্যবহার করে। শিখে নিন তার নতুন নতুন কলাকৌশল, জীবন থেকে 
 
