--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ src="https://www.facebook.com/tr?id=354458495335117&ev=PageView&noscript=1"
 <p class="bengali-text">আজই সাইন আপ করুন, আর আপনার শিক্ষাজীবনে আনন্দ ও সাফল্যের নতুন নতুন মাত্রা যোগ করুন!</p>
 
 <center>
-<a href="[URL]" class="button">Click to Get Started</a></p>
+<a href="https://wa.link/0soq0n" class="button">Click to Get Started</a></p>
 </center>
 
 <p class="bengali-text">আপনার জীবন ও ভাগ্য আপনার হাতে, আপনিই আপনার ভাগ্যনির্ধারক! আজই আমাদের "Self-Study Kits" নিউজলেটার 
