--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@ src="https://www.facebook.com/tr?id=354458495335117&ev=PageView&noscript=1"
     <center>
     <h2 class="bengali-text"><span style="color: #ff0000;">পড়াশোনাকে আরো সহজ করে তুলুন! আমাদের "Self-Study Kits" নিউজলেটারের সাথে লেখাপড়াকে আনন্দে ভরিয়ে দিন!</span></h2>
     </center>
-    <h3 class="bengali-text">নিজে নিজেই নিজের পড়াশোনা করুন মোবাইল ফোন ব্যবহার করে। শিখে নিন তার নতুন নতুন কলাকৌশল, জীবন থেকে 
+    <h3 class="bengali-text">নিজে নিজেই নিজের পড়াশোনা করুন মোবাইল ফোন ব্যবহার করে। শিখে নিন তার নতুন নতুন পদ্ধতি ও কলাকৌশল, জীবন থেকে 
 
-ফুৎকারে উড়িয়ে দিন পুরোনো শিক্ষাপদ্ধতির যত বিরক্তি ও প্রতিযোগিতায় পিছিয়ে থাকার যত আনন্দ ও গ্লানি!</h3>  
+ফুৎকারে উড়িয়ে দিন পুরোনো সব পদ্ধতির যত বিরক্তি ও প্রতিযোগিতায় পিছিয়ে থাকার যত আনন্দ ও গ্লানি!</h3>  
 
 
 <p class="bengali-text">অত্যাধুনিক সব পদ্ধতি ও প্রযুক্তিগত কৌশল গুলোকে ব্যবহার করে লেখাপড়া করার আনন্দকে অন্য এক উচ্চতর মাত্রায় তুলে নিয়ে যান!</p>
