--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ src="https://www.facebook.com/tr?id=354458495335117&ev=PageView&noscript=1"
 <BODY oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
 <div>
     <center>
-    <h2 class="bengali-text"><span style="color: #ff0000;">পড়াশোনাকে করে তুলুন আরো সহজ, স্বাভাবিক ও আনন্দময়।! আমাদের "Self-Study Kits" নিউজলেটারের টিপ্স গুলোর সাহায্য নিয়ে।</span></h2>
+    <h2 class="bengali-text"><span style="color: #ff0000;">পড়াশোনাকে করে তুলুন আরো সহজ, স্বাভাবিক ও আনন্দময়! আমাদের "Self-Study Kits" নিউজলেটারের টিপ্স গুলোর সাহায্য নিয়ে।</span></h2>
     </center>
     <h3 class="bengali-text">নিজে নিজেই নিজের পড়াশোনা করুন মোবাইল ফোন ব্যবহার করে। শিখে নিন তার নতুন নতুন পদ্ধতি ও কলাকৌশল, জীবন থেকে 
 
