--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ src="https://www.facebook.com/tr?id=354458495335117&ev=PageView&noscript=1"
 <BODY oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
 <div>
     <center>
-    <h2 class="bengali-text"><span style="color: #ff0000;">পড়াশোনাকে করে তুলুন আরো সহজ, স্বাভাবিক ও আনন্দময়! আমাদের "Self-Study Kits" নিউজলেটারের টিপ্স গুলোর সাহায্য নিয়ে।</span></h2>
+    <h2 class="bengali-text"><span style="color: #ff0000;">পড়াশোনাকে করে তুলুন আরো সহজ, স্বাভাবিক ও আনন্দময়! আমাদের "Self-Study Kits" নিউজলেটারের টিপ্স দিয়ে।</span></h2>
     </center>
     <h3 class="bengali-text">নিজে নিজেই নিজের পড়াশোনা করুন মোবাইল ফোন ব্যবহার করে। শিখে নিন তার নতুন নতুন পদ্ধতি ও কলাকৌশল, জীবন থেকে 
 
@@ -174,11 +174,11 @@ src="https://www.facebook.com/tr?id=354458495335117&ev=PageView&noscript=1"
 
 <p class="bengali-text">লেখাপড়ার আনন্দ ও সাফল্যতে নিত্য নতুন আরো আরো মাত্রা যোগ করুন আপনার হাতের মোবাইলটাকে পড়াশোনাতে ব্যবহার করে।</p>
 
-<p class="bengali-text">নিজে নিজেই নিজের পড়াশোনা করতে উৎসাহীদের জন্য বিশেষভাবে তৈরি করা যত অনলাইন কার্যক্রম গুলোর এক বিশাল সমুদ্রে ডুব দিন, 
+<p class="bengali-text">নিজে নিজেই নিজের পড়াশোনা করতে আগ্রহীদের জন্য বিশেষভাবে তৈরি করা যত অনলাইন কার্যক্রম গুলোর এক বিশাল সমুদ্রে ডুব দিন, 
 
 আর আপনার পড়াশোনাকে আরও মজাদার করুন!<p>
 
-<p class="bengali-text">আমাদের নিউজলেটারে এক্সক্লুসিভভাবে পাওয়া যাবে পরীক্ষিত পদ্ধতিগুলোর এক গুপ্তধন, যেগুলো  নিজে নিজেই নিজের পড়াশোনা করার 
+<p class="bengali-text">আমাদের নিউজলেটারে এক্সক্লুসিভভাবে পাওয়া যাবে পরীক্ষিত পদ্ধতিগুলোর এক ভান্ডার, যেগুলো নিজে নিজেই নিজের পড়াশোনা করার 
 
 পদ্ধতি দিয়ে আপনার পড়াশোনা ও ব্যক্তিত্ব বিকাশের ধারাটকে বদলে দেবে চিরতরে!</p>
 
