--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ src="https://www.facebook.com/tr?id=354458495335117&ev=PageView&noscript=1"
     </center>
     <h3 class="bengali-text">নিজে নিজেই নিজের পড়াশোনা করুন মোবাইল ফোন ব্যবহার করে। শিখে নিন তার নতুন নতুন পদ্ধতি ও কলাকৌশল, জীবন থেকে 
 
-ফুৎকারে উড়িয়ে দিন পুরোনো সব পদ্ধতির যত বিরক্তি ও প্রতিযোগিতায় পিছিয়ে থাকার যত আতঙ্ক ও গ্লানি!</h3>  
+ফুৎকারে উড়িয়ে দিন পুরোনো সব পদ্ধতির যত বিরক্তি ও প্রতিযোগিতায় পিছিয়ে থাকার যত অপারগতা ও গ্লানি!</h3>  
 
 
 <p class="bengali-text">লেখাপড়ার আনন্দ ও সাফল্যতে নিত্য নতুন আরো আরো মাত্রা যোগ করুন আপনার হাতের মোবাইলটাকে পড়াশোনাতে ব্যবহার করে।</p>
