--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ src="https://www.facebook.com/tr?id=354458495335117&ev=PageView&noscript=1"
 ফুৎকারে উড়িয়ে দিন পুরোনো সব পদ্ধতির যত বিরক্তি ও প্রতিযোগিতায় পিছিয়ে থাকার যত অপারগতা ও গ্লানি!</h3>  
 
 
-<p class="bengali-text">লেখাপড়ার আনন্দ ও সাফল্যতে নিত্য নতুন আরো আরো মাত্রা যোগ করুন আপনার হাতের মোবাইলটাকে পড়াশোনাতে ব্যবহার করে।</p>
+<p class="bengali-text">লেখাপড়ার আনন্দ ও সাফল্যতে আরো আরো নিত্য নতুন মাত্রা যোগ করুন আপনার হাতের মোবাইলটাকে পড়াশোনাতে ব্যবহার করে।</p>
 
 <p class="bengali-text">নিজে নিজেই নিজের পড়াশোনা করতে আগ্রহীদের জন্য বিশেষভাবে তৈরি করা যত অনলাইন কার্যক্রম গুলোর এক বিশাল সমুদ্রে ডুব দিন, 
 
