--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ src="https://www.facebook.com/tr?id=354458495335117&ev=PageView&noscript=1"
 <p class="bengali-text">আজই সাইন আপ করুন, আর আপনার শিক্ষাজীবনে আনন্দ ও সাফল্যের নতুন নতুন মাত্রা যোগ করুন!</p>
 
 <center>
-    <p><sub>হোয়াটসঅ্যাপে রিকোয়েস্ট পাঠিয়ে</sub>
+    <p><sub>হোয়াটসঅ্যাপে রিকোয়েস্ট পাঠিয়ে</sub><br />
 <a href="https://wa.link/0soq0n" class="button">সাবস্ক্রাইব করতে এখানে ক্লিক করুন</a></p>
 </center>
 
