--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ type="text/javascript"></script>
         }
         a.button:link, a.button:visited {
             display: inline-block;
-            background-color: #1b74e4;
+            background-color: #0ec143;
             color: #fff;
             padding: 10px 20px;
             text-decoration: none;
