--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ type="text/javascript"></script>
             z-index: 99;
             border: none;
             outline: none;
-            background-color: #007BFF;
+            background-color: #0ec143;
             color: #fff;
             cursor: pointer;
             padding: 10px;
