--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ src="https://www.facebook.com/tr?id=354458495335117&ev=PageView&noscript=1"
 
 পদ্ধতি দিয়ে আপনার পড়াশোনা ও ব্যক্তিত্ব বিকাশের ধারাটকে বদলে দেবে চিরতরে!</p>
 
-<p class="mixed-text"><strong>আমাদের নিউজলেটার প্রতি সপ্তাহে WhatsApp-এর মাধ্যমে আপনার স্মার্টফোনে পাঠানো হবে।</strong> এতে 
+<p class="bengali-text"><strong>আমাদের নিউজলেটার প্রতি সপ্তাহে WhatsApp-এর মাধ্যমে আপনার স্মার্টফোনে পাঠানো হবে।</strong> এতে 
 
 থাকবে:</p>
 <p class="bengali-text"><ul>
