--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@ src="https://www.facebook.com/tr?id=354458495335117&ev=PageView&noscript=1"
 
 থাকবে:</p>
 <p class="bengali-text"><ul>
-<li>পরীক্ষিত পদ্ধতিগুলোর এক গুপ্তধন, যেগুলো নিজে নিজেই নিজের পড়াশোনা করার পদ্ধতি দিয়ে আপনার পড়াশোনা ও ব্যক্তিত্ব বিকাশের ধারাটকে বদলে দেবে চিরতরে!</li>
-<li>নিজে নিজেই পড়াশোনা করার জন্য বিশেষভাবে তৈরি করা অনলাইন কার্যক্রমের সংক্ষিপ্তসার</li>
-<li>নতুন জ্ঞান ও দক্ষতা অর্জনের জন্য আপনার ব্যক্তিগত লক্ষ্য নির্ধারণের জন্য সহায়তা</li>
+<li class="bengali-text">পরীক্ষিত পদ্ধতিগুলোর এক গুপ্তধন, যেগুলো নিজে নিজেই নিজের পড়াশোনা করার পদ্ধতি দিয়ে আপনার পড়াশোনা ও ব্যক্তিত্ব বিকাশের ধারাটকে বদলে দেবে চিরতরে!</li>
+<li class="bengali-text">নিজে নিজেই পড়াশোনা করার জন্য বিশেষভাবে তৈরি করা অনলাইন কার্যক্রমের সংক্ষিপ্তসার</li>
+<li class="bengali-text">নতুন জ্ঞান ও দক্ষতা অর্জনের জন্য আপনার ব্যক্তিগত লক্ষ্য নির্ধারণের জন্য সহায়তা</li>
 </ul></p>
 
 <p class="bengali-text">এই নিউজলেটারে সবার জন্যই আছে কিছু না কিছু! আর এটি একেবারে ফ্রি!</p>
