--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ Policy</a></span></p>
             <span style="font-size: 12pt; font-family: lora, serif; color: #000000;">
                 Copyright &copy; <script>document.write(new Date().getFullYear())
 
-</script>.&nbsp;https://spmukherjee.in
+</script>.&nbsp;SelfStudySquad.com
             </span>
         </p>
 
