--- a/index.html
+++ b/index.html
@@ -216,15 +216,15 @@ src="https://www.facebook.com/tr?id=354458495335117&ev=PageView&noscript=1"
 
 #0ec143;"><span style="color: #0ec143;"><a style="text-decoration: none; color: #0ec143;" 
 
-href="https://spmukherjee.in/earnings-disclaimer.html">Disclaimer</a></span> <span 
+href="https://selfstudysquad.com/disclaimer.html">Disclaimer</a></span> <span 
 
 style="color: #0ec143;">|</span> <span style="color: #0ec143;"><a style="text-decoration: none; 
 
-color: #0ec143;" href="https://spmukherjee.in/terms-of-use.html">Terms of Use</a></span> <span 
+color: #0ec143;" href="https://selfstudysquad.com/terms-of-use.html">Terms of Use</a></span> <span 
 
 style="color: #0ec143;">|</span> <span style="color: #0ec143;"><a style="text-decoration: none; 
 
-color: #0ec143;" href="https://spmukherjee.in/privacy-policy.html">Privacy 
+color: #0ec143;" href="https://selfstudysquad.com/privacy-policy.html">Privacy 
 
 Policy</a></span></p>
 
